# django-contact-form

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  INSTALL.txt  LICENSE  MANIFEST.in  Makefile  README.rst  forms.py  noxfile.py  pyproject.toml  runtests.py  setup.cfg  setup.py  test_requirements.txt  tox.ini  urls.py  views.py
.github/workflows/: ci.yml
contact_form/: forms.py  models.py  recaptcha_urls.py  runtests.py  urls.py  views.py
contact_form/locale/de/LC_MESSAGES/: django.mo  django.po
contact_form/locale/en/LC_MESSAGES/: django.mo  django.po
contact_form/locale/es/LC_MESSAGES/: django.mo  django.po
contact_form/locale/eu/LC_MESSAGES/: django.mo  django.po
contact_form/locale/fr/LC_MESSAGES/: django.mo  django.po
contact_form/tests/: __init__.py  forms.py  test_forms.py  test_urls.py  test_views.py  views.py
contact_form/tests/templates/contact_form/: contact_form_sent.html  test_template_request_context.html
docs/: Makefile  changelog.rst  conf.py  docs_settings.py  faq.rst  forms.rst  forms.txt  index.rst  install.rst  make.bat  overview.txt  quickstart.rst  spelling_wordlist.txt  upgrade.rst  usage.rst  views.rst  views.txt
src/contact_form/: akismet_urls.py  forms.py  recaptcha_urls.py  urls.py  views.py
src/contact_form/locale/de/LC_MESSAGES/: django.mo
src/contact_form/locale/en/LC_MESSAGES/: django.mo  django.po
src/contact_form/locale/es/LC_MESSAGES/: django.mo  django.po
src/contact_form/locale/eu/LC_MESSAGES/: django.po
src/contact_form/locale/fr/LC_MESSAGES/: django.mo
src/contact_form/locale/nl/LC_MESSAGES/: django.po
src/django_contact_form/: __init__.py  _akismet.py  akismet_urls.py  forms.py  urls.py  views.py
tests/: settings.py  test_akismet_integration.py  test_forms.py  test_urls.py  test_views.py
tests/templates/contact_form/: contact_form_subject.txt  test_callable_template_name.html
